# Thrustline

./: .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  PROGRESS.md  README.md  codex.md  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
Thrustline.WPF/: Thrustline.sln
Thrustline.WPF/Thrustline/: App.xaml  App.xaml.cs  MainWindow.xaml  Thrustline.csproj
app/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
app/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: README.md
app/src-tauri/src/: lib.rs  main.rs
electron/: main.ts  preload.cjs  supabase.ts
electron/simconnect/: types.ts
electron/sync/: syncEngine.ts
legacy/: README.md  index.html  package-lock.json
legacy/electron/: main.ts  migrateDb.ts  preload.ts
legacy/server/: index.ts
legacy/src/: App.tsx
prisma/: schema.prisma
scripts/: build-sidecar.ps1  fetch-airports.mjs  security-check.ps1
server/: index.ts
server/routes/: company.ts  crew.ts  dispatch.ts  events.ts  flights.ts  routes.ts
server/services/: cashflow.ts  company.ts  crew.ts  dispatch.ts  (+6 more)
sim-bridge/: .gitignore  Program.cs  Thrustline.Bridge.csproj  appsettings.Development.json  appsettings.json
src/: App.tsx  vite-env.d.ts
supabase/: README.md  SECURITY_DEPLOYMENT.md  config.toml
(+281 files in other folders)
