[package]
name = "thrustline"
version = "0.1.0"
description = "Thrustline — virtual airline companion for MSFS 2024"
authors = ["Thrustline"]
edition = "2021"

[lib]
name = "thrustline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
